syntax = "proto3";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "dk.dsrhorsens.volunteers.proto";

package volunteer_manager;

service EventService {
  rpc createEvent (EventInfo) returns (EventId) {}
  rpc retrieveEvent (EventId) returns (IndexedEvent) {}
  rpc updateEvent (IndexedEvent) returns (google.protobuf.Empty) {}
  rpc deleteEvent (EventId) returns (google.protobuf.Empty) {}
  rpc listEvents (google.protobuf.Empty) returns (EventList) {}
}

message EventInfo {
  string eventName = 1;
  string start_time = 2;
  string end_time = 3;
}

message IndexedEvent {
  EventId eventId = 1;
  EventInfo eventInfo = 2;
}

message EventId {
  int32 id = 1;
}

message EventList {
  repeated IndexedEvent events = 1;
}